<resources>
    <string name="app_name">Meetapp</string>
    <string name="nombre">Nombre</string>
    <string name="lugar">Lugar</string>
    <string name="fecha">Fecha</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="action_guardar">Guardar</string>
    <string name="titulo">Título</string>
    <string name="encargado">Encargado</string>
    <string name="descripcion">Descripción</string>
    <string name="texto_editar">Editar</string>
    <string name="texto_borrar">Borrar</string>
    <string name="crear_evento">Crear evento</string>
    <string name="crear_tarea">Crear tarea</string>
    <string name="tareas_sin_finalizar">Hay tareas sin finalizar!</string>
    <string name="tareas_sin_encargado">Hay tareas sin encargado!</string>
    <string name="success_division_msg">La división de gastos del evento se ha realizado con éxito.</string>
    <string name="success_division_info_msg">La división de gastos del evento ya ha sido realizada anteriormente.</string>
    <string name="alert_success_total_msg">Gastos totales:</string>
    <string name="alert_success_individual_msg">Gasto por Participante:</string>
    <string name="emtpy_msg_division_gastos">Aún no has dividido los gastos del evento. Para hacerlo, haz click en el botón flotante en la esquina inferior derecha.</string>
    <string name="emtpy_msg_eventos">Aún no has creado ningun evento. Para hacerlo, haz click en el botón flotante en la esquina inferior derecha.</string>
    <string name="emtpy_msg_tareas">Aún no has creado tareas para el evento. Para hacerlo, haz click en el botón flotante en la esquina inferior derecha.</string>
    <string name="emtpy_msg_participantes">Aún no has añadido participantes al evento. Para hacerlo, haz click en el botón flotante en la esquina inferior derecha.</string>
    <string name="agregar_gasto">Agregar gasto</string>
    <string name="gastos_actuales_de_la_tarea">Gastos actuales de la tarea:</string>
    <string name="no_hay_tareas_msg_error">Aún no hay tareas en el evento!</string>
    <string name="permisos_contactos_dialog_title">Acceso a Contactos</string>
    <string name="permisos_contactos_dialog_msg">La APP necesita acceso a sus contactos para que los pueda agregar como participantes a un evento</string>
    <string name="dialog_borrar_pagos_title">¿Desea continuar?</string>
    <string name="dialog_borrar_pagos_message">La división de gastos actual se eliminará.</string>
    <string name="tarea_borrada">Tarea borrada</string>
    <string name="no_se_agrego_gasto">No se pudo agregar el gasto</string>
    <string name="tarea_no_borrada">La tarea no se borró</string>
    <string name="tarea_no_editada">La tarea no se editó</string>
    <string name="participante_no_borrado">Participante no borrado</string>
    <string name="participante_borrado">Participante borrado</string>
    <string name="dar_por_finalizada">Dar por finalizada</string>
    <string name="tarea_no_asignada">La tarea no fue asignada a ningun participante</string>
    <string name="tarea_ya_finalizada">La tarea ya se encuentra finalizada</string>
    <string name="evento_editado">Evento editado exitosamente</string>
    <string name="evento_creado">Evento creado exitosamente</string>
    <string name="tarea_creada">Tarea creada exitosamente</string>
    <string name="tarea_editada">Tarea editada exitosamente</string>
    <string name="participante_creado">Participante agregado exitosamente</string>
    <string name="titulo_dialog">Solicitud de permisos</string>
    <string name="solicitud_permiso_foto">Para poder capturar una foto es necesario que le des los permisos necesarios a la aplicación.</string>
    <string name="cargar_imagen">Cargar Foto</string>
    <string name="sms_msg">Te he agregado a un evento como participante!</string>
    <string name="ver_foto">Ver Foto</string>
    <string name="emtpy_msg_foto_dialog">Esta tarea no tiene ninguna foto para mostrar todavía.</string>
    <string name="tarea_no_creada">La tarea no ha sido creada</string>
    <string name="participante_no_creado">No se ha podido añadir el participante</string>
    <string name="string_content_description_img_form">Cargada por el participante asignado a la tarea, muestra información adicional respecto a la misma.</string>
    <string name="no_image">No se ha cargado una foto todavía</string>
    <string name="icono_llamar">Llamar</string>
    <string name="icono_sms">Enviar mensaje de texto</string>
    <string name="le_paga_a">Le paga a </string>
    <string name="finalizada">Tarea finalizada</string>
    <string name="tarea_title_ejemplo">Comprar servilletas de muchos colores y tamaños diversos, pero baratas.</string>
    <string name="gasto_cero">$0.00</string>
    <string name="dollar">$</string>
    <string name="gasto_cero_sin_dolar">0.00</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="name_example">Diego Garcia Lozano</string>
    <string name="number_example">+543425202254</string>
    <string name="participantes">%1$d Participantes</string>
    <string name="tareas_avance">%1$d de %2$d Tareas</string>
    <string name="body_msg_notif">%1$s es mañana en %2$s.</string>
    <string name="title_notif">Tienes un evento mañana</string>
    <string name="asignar_encargado">Asignar encargado</string>
    <string name="no_se_asigno_encargado">No se asigno encargado</string>
    <string name="editar_evento">Editar evento</string>
    <string name="editar_tarea">Editar tarea</string>
</resources>
