<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_nombre_tarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="12dp"
        android:scaleType="center"
        android:text="@string/tarea_title_ejemplo"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView_label_gasto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_nombre_tarea"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/gastos_actuales_de_la_tarea"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_label_gastoactual_valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_label_gasto"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/gasto_cero"
        android:textAlignment="center"
        android:textSize="20sp" />


    <LinearLayout
        android:id="@+id/agregarGasto_ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView_label_gastoactual_valor"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/dollar" />

        <EditText
            android:id="@+id/editText_gasto"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/gasto_cero_sin_dolar"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/button_sumar"
            style="@android:style/Widget.Material.Button.Small"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin_small"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/plus"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_restar"
            style="@android:style/Widget.Material.Button.Small"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/minus"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/agregarGasto_ll1"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancelar"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:text="@string/cancelar"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryDark" />

        <Button
            android:id="@+id/btn_guardar"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:text="@string/guardar"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryDark" />

    </LinearLayout>

</RelativeLayout>
