<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/header_alert_success_gastos"
        android:src="@drawable/ic_account_balance_white_36dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_alert_success_gastos_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:layout_weight="1"
        android:text="@string/success_division_msg"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintTop_toBottomOf="@id/header_alert_success_gastos" />

    <TextView
        android:id="@+id/tv_alert_success_gastos_total_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/alert_success_total_msg"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_alert_success_gastos_titulo" />

    <TextView
        android:id="@+id/tv_alert_success_gastos_individual_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/alert_success_individual_msg"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_alert_success_gastos_total_msg" />

    <Button
        android:id="@+id/tv_alert_success_button_ok"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:text="@android:string/ok"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/tv_alert_success_gastos_individual_msg" />

</android.support.constraint.ConstraintLayout>